[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://scripts/ui/ThreatResolvePanel.gd" id="1"]

[sub_resource type="Animation" id="1"]
resource_name = "slide_up"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 1,
"values": [0.0, -200.0]
}

[sub_resource type="Animation" id="2"]
resource_name = "slide_down"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 1,
"values": [-200.0, 0.0]
}

[sub_resource type="Animation" id="3"]
resource_name = "pulse"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/ResultBox/ResultText:scale")
tracks/0/interp = 1
tracks/0/loop = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.12, 0.3),
"transitions": PackedFloat32Array(0.4, 0.4, 0.4),
"update": 1,
"values": [Vector2(1, 1), Vector2(1.08, 1.08), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="4"]
_anims = {
"pulse": SubResource("3"),
"slide_down": SubResource("2"),
"slide_up": SubResource("1")
}

[node name="ThreatResolvePanel" type="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = -280.0
offset_right = 0.0
offset_bottom = 0.0
position = Vector2(0, 0)
mouse_filter = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 280)
visible = false
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
mouse_filter = 2
color = Color(0.08, 0.05, 0.12, 0.9)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_default_blend_time = 0.05
libraries = {
"": SubResource("4")
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 24.0
offset_right = -32.0
offset_bottom = -24.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 18

[node name="ResultBox" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 12

[node name="ResultText" type="Label" parent="VBoxContainer/ResultBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "DEFENDED"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
theme_override_font_sizes/font_size = 72

[node name="AnimSlot" type="Control" parent="VBoxContainer/ResultBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 120)
mouse_filter = 2

[node name="Placeholder" type="ColorRect" parent="VBoxContainer/ResultBox/AnimSlot"]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
mouse_filter = 2
color = Color(0.18, 0.25, 0.32, 0.4)

[node name="Stats" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 1
custom_constants/separation = 12

[node name="DefenseVal" type="Label" parent="VBoxContainer/Stats"]
layout_mode = 2
size_flags_horizontal = 1
text = "Defense 0"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 28

[node name="PowerVal" type="Label" parent="VBoxContainer/Stats"]
layout_mode = 2
size_flags_horizontal = 1
text = "vs Power 0"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 28

[node name="NextBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 1
custom_constants/separation = 6

[node name="NextName" type="Label" parent="VBoxContainer/NextBox"]
layout_mode = 2
size_flags_horizontal = 1
text = "â€”"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 24

[node name="NextTime" type="Label" parent="VBoxContainer/NextBox"]
layout_mode = 2
size_flags_horizontal = 1
text = ""
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 24
